	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.0 patched


BUG FIXES

    o	memory.limit(size) gave a spurious error message.
    
    o	file.choose() and the save console dialog did not set the
	file filters properly.

    o	Rcmd INSTALL --build in 2.9.0 did not make _bundles_ in the
	format install.packages() expected.
    
    

    		CHANGES IN R VERSION 2.9.0


NEW FEATURES

    o	memory.size() and memory.limit() now return rounded values.
    
    o	The Rgui preferences dialog now allows more flexible colour
    	settings, and shows a sample of what will be displayed.

    o	The file selection items on Rgui's File menu now work in
	Unicode and so allow filenames not in the current encoding to
	be selected.

    o	file.choose() and choose.files() now work with Unicode file
	names, so are able to select filenames not in the current
	encoding.  (Note that we do not expect to handle directory
	paths not in the current encoding and they will not be
	retained as the current search directory.)

    o	The script editor is now able to open files with names which are
	not in the current encoding: however the title displayed will
	replace invalid bytes by '?'.

    o	file() and pipe() now open non-ASCII pathnames as Unicode:
	this helps if R is running in a character set different from that
	used by Windows.

    o	help(topic, offline=TRUE) now creates a file called <topic>.tex,
	rather than Rdoc.tex.

    o	The trio library has been updated to version 1.13.

    o	New function msgWindow() to allow a windows() device or the
	Rgui console to be minimized, maximize or restored and (not
	the console) hidden, and to have recording turned on or off.

    o	Rcmd SHLIB now uses the same code as on a Unix-alike, and so
	has some extra options.

    o	iconv() is now done by a version of Yukihiro Nakadaira's
	win_iconv rather than by libiconv.  This version is based on